name:                tagged-aeson
version:             1.0.0
synopsis:            Have many Aeson instances for the same type!
description:
  This package provides alternative 'FromJSON' and 'ToJSON' classes
  that come equipped with a tag, which lets you have several different
  Aeson instances for the same type.
homepage:            http://github.com/monadfix/tagged-aeson
bug-reports:         http://github.com/monadfix/tagged-aeson/issues
license:             BSD3
license-file:        LICENSE
author:              Artyom Kazak
maintainer:          Monadfix <hi@monadfix.io>
-- copyright:
category:            Text, Web, JSON
tested-with:         GHC == 8.6.4
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/monadfix/tagged-aeson.git

library
  exposed-modules:     Data.Aeson.Tagged
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson
                     , base >=4.8 && <5
                     , base-prelude
                     , scientific
                     , template-haskell >=2.12 && <2.15
                     , text
                     , uniplate
                     , unordered-containers
                     , vector
                     , hashable
                     , deepseq
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      lib
  default-language:    Haskell2010
